--- a/public/style/video.less
+++ b/public/style/video.less
@@ -234,3 +234,14 @@ video,iframe{
   height: 100vh;
   border: none;
 }
+
+.key-search{
+  padding:8px;
+  input{
+    outline:none;
+    width : 100%;
+    padding:8px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+  }
+}
