--- a/public/style/main.less
+++ b/public/style/main.less
@@ -1,2 +1,8 @@
-@import 'reset.less';
+@import 'base/reset.less';
+@import 'base/vars.less';
+@import 'base/form.less';
+@import 'base/button.less';
+@import 'base/message.less';
+
 @import 'video.less';
+@import 'signin.less';
